src/objects/Communication__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountName</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Communications</relationshipLabel>
        <relationshipName>Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActivityDate__c</fullName>
        <label>ActivityDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActivityTime__c</fullName>
        <label>ActivityTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Attempt_Status__c</fullName>
        <label>Call Attempt Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tele Meeting Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tele Meeting Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMD + MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booking Done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Back_Date__c</fullName>
        <label>Call Back Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Back__c</fullName>
        <label>Call Back</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Proposed_Date_Of_Visit__c</fullName>
        <label>Call Proposed Date Of Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Rating__c</fullName>
        <label>Call Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Source__c</fullName>
        <label>Call Source</label>
        <picklist>
            <picklistValues>
                <fullName>Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Status__c</fullName>
        <label>Call Status</label>
        <picklist>
            <picklistValues>
                <fullName>Call complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ringing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disconnected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spoke to 3rd party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call back later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Switched off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reachable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Lookup</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Communications</relationshipLabel>
        <relationshipName>Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Phone__c</fullName>
        <label>Channel Partner Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Communication_Type__c</fullName>
        <label>Communication Type</label>
        <picklist>
            <picklistValues>
                <fullName>Inbound Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Configuration__c</fullName>
        <label>Configuration</label>
        <picklist>
            <picklistValues>
                <fullName>1.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penthouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Villa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_First_Name__c</fullName>
        <formula>if( NOT(ISBLANK( OptyName__c )), OptyName__r.Account.FirstName , if(NOT(ISBLANK(LeadName__c)), LeadName__r.FirstName,if(NOT(ISBLANK(AccountName__c)),AccountName__r.FirstName, &apos;No Name&apos;)))</formula>
        <label>Customer First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Last_Name__c</fullName>
        <formula>if( NOT(ISBLANK( OptyName__c )), OptyName__r.Account.LastName , if(NOT(ISBLANK(LeadName__c)), LeadName__r.LastName,if(NOT(ISBLANK(AccountName__c)),AccountName__r.LastName, &apos;No Name&apos;)))</formula>
        <label>Customer Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Mobile_Phone__c</fullName>
        <label>Customer Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Preferred_Email__c</fullName>
        <label>Customer Preferred Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Date_of_Visit_SMS__c</fullName>
        <formula>TEXT(DAY(DATEVALUE(Call_Proposed_Date_Of_Visit__c )))+&quot;/&quot; +TEXT(MONTH(DATEVALUE(Call_Proposed_Date_Of_Visit__c )))+&quot;/&quot; +TEXT(YEAR(DATEVALUE(Call_Proposed_Date_Of_Visit__c )))+&quot; &quot; 
+ IF( 
OR( 
VALUE( MID( TEXT( Call_Proposed_Date_Of_Visit__c + 0.2292 ), 12, 2 ) ) = 0, 
VALUE( MID( TEXT( Call_Proposed_Date_Of_Visit__c + 0.2292 ), 12, 2 ) ) = 12 
), 
&quot;12&quot;, 
TEXT( VALUE( MID( TEXT( Call_Proposed_Date_Of_Visit__c + 0.2292 ), 12, 2 ) ) 
- 
IF( 
VALUE( MID( TEXT( Call_Proposed_Date_Of_Visit__c + 0.2292 ), 12, 2 ) ) &lt; 12, 
0, 
12 
) 
) 
) 
&amp; &quot;:&quot; &amp; 
MID( TEXT( Call_Proposed_Date_Of_Visit__c + 0.2292 ), 15, 2 ) 
&amp; &quot; &quot; &amp; 
IF( 
VALUE( MID( TEXT( Call_Proposed_Date_Of_Visit__c + 0.2292 ), 12, 2 ) ) &lt; 12, 
&quot;AM&quot;, 
&quot;PM&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Proposed Date of Visit For SMS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Id__c</fullName>
        <label>Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enquiry_Received_Project_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enquiry Received Project Lookup</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Communications (Enquiry Received Project Lookup)</relationshipLabel>
        <relationshipName>Communications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled By Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ExistingChannelPartner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Existing Channel Partner</label>
        <referenceTo>Broker__c</referenceTo>
        <relationshipLabel>Communications</relationshipLabel>
        <relationshipName>Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Institute__c</fullName>
        <label>Visiting At</label>
        <picklist>
            <picklistValues>
                <fullName>Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Venue Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsFirstPresalesCall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsFirstPresalesCall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LeadName</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Communications</relationshipLabel>
        <relationshipName>Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Project__c</fullName>
        <formula>LeadName__r.RDS_Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number_Webform__c</fullName>
        <label>Mobile Number Webform</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name_Of_Account__c</fullName>
        <formula>OptyName__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Of Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewChannel_Partner_Name__c</fullName>
        <label>Channel Partner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Action_Date__c</fullName>
        <label>Next Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OptyName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OptyName</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Communications</relationshipLabel>
        <relationshipName>Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OptyOwner__c</fullName>
        <formula>OptyName__r.Owner.FirstName &amp; &quot; &quot; &amp; OptyName__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OptyOwner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Call_Attempt_Status__c</fullName>
        <label>Previous Call Attempt Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Interested__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Interested</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Communications</relationshipLabel>
        <relationshipName>Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>OptyName__r.Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registraion_Status__c</fullName>
        <label>Registraion Status</label>
        <picklist>
            <picklistValues>
                <fullName>Agreement Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIP Details Sent to Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Deferred-Indemnity Given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIP-Registration Date Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement Registered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revisit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revisit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Attempted_By__c</fullName>
        <label>Sales Manager</label>
        <picklist>
            <picklistValues>
                <fullName>SM1@g.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SM2@g.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netra</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Email__c</fullName>
        <label>Sales Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Mobile__c</fullName>
        <label>Sales Manager Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Name__c</fullName>
        <label>Sales Manager Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Walk_In_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Walk In Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sourcing_Manager__c</fullName>
        <label>Sourcing Manager</label>
        <picklist>
            <picklistValues>
                <fullName>SM1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SM2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Sourcing Manger</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <picklist>
            <picklistValues>
                <fullName>Send Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Loan Closure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer of Home Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home loan not being disbursed: Defaulted on EMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Loan not being disbursed: Bank has query</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has Home Loan Query</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TaskId__c</fullName>
        <externalId>true</externalId>
        <label>TaskId</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Task Type</label>
        <picklist>
            <picklistValues>
                <fullName>Enquiry Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presales Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Sales Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Attended_By__c</fullName>
        <label>Team Attended By</label>
        <picklist>
            <picklistValues>
                <fullName>RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit_Form_Number__c</fullName>
        <label>Visit Form Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Status__c</fullName>
        <label>Visit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold - Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm - Follow up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revisit Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revisit Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revisit Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit_Type__c</fullName>
        <label>Visit Type</label>
        <picklist>
            <picklistValues>
                <fullName>OBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Visit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visitor_s_Email_Id__c</fullName>
        <label>Visitor&apos;s Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Visitor_s_Phone_No__c</fullName>
        <label>Visitor&apos;s Phone No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Walk_in_Source__c</fullName>
        <label>Walk-in Source</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Walk_in_Sub_Source__c</fullName>
        <label>Walk-in Sub Source</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate Tie Ups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibitions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booked Customer Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoardings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inserts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyalty Programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of Mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Walk-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sobjectName__c</fullName>
        <label>sobjectName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Communication</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Task_Type__c</columns>
        <columns>sobjectName__c</columns>
        <columns>Customer_Last_Name__c</columns>
        <columns>Customer_Mobile_Phone__c</columns>
        <columns>Sales_Manager_Name__c</columns>
        <columns>Sales_Manager_Mobile__c</columns>
        <columns>LeadName__c</columns>
        <columns>OptyName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Communication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Communications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>